--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "@types/react-helmet": "^6.1.2",
+    "prettier": "2.3.2",
+    "typescript": "^4.4.2"
   },
   "keywords": [
     "gatsby"
