--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@types/react-helmet": "^6.1.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-graphql": "^4.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "gatsby": "^3.12.1",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-offline": "^4.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-root-import": "^2.0.7",
     "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-typegen": "^2.2.4",
+    "gatsby-remark-autolink-headers": "^4.9.0",
+    "gatsby-remark-images": "^5.9.0",
+    "gatsby-remark-prismjs": "^5.9.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
+    "prettier": "^2.3.2",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
-  },
-  "devDependencies": {
-    "@types/react-helmet": "^6.1.2",
-    "prettier": "2.3.2",
+    "react-helmet": "^6.1.0",
     "typescript": "^4.4.2"
   },
   "keywords": [
