--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.2",
+    "autoprefixer": "^10.3.3",
     "eslint": "^7.32.0",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^3.4.1",
@@ -17,6 +18,7 @@
     "gatsby-plugin-manifest": "^3.12.0",
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-offline": "^4.12.0",
+    "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-root-import": "^2.0.7",
     "gatsby-plugin-sharp": "^3.12.0",
@@ -27,12 +29,14 @@
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.2.8",
     "typescript": "^4.4.2"
   },
   "keywords": [
