--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-offline": "^4.12.0",
     "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-root-import": "^2.0.7",
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-typegen": "^2.2.4",
