--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "xpcoffee-github-io",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Emerick Bosch's personal site.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Emerick Bosch <xpc.dev@gmail.com>",
   "dependencies": {
     "@fontsource/quicksand": "^4.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -36,6 +36,7 @@
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
@@ -54,6 +55,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "deploy": "gatsby build && gh-pages -d public -b main",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -61,9 +63,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/xpcoffee/xpcoffee.github.io"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/xpcoffee/xpcoffee.github.io/issues"
   }
 }
