--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "gatsby": "^3.12.1",
+    "gatsby": "^3.13.0",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
     "gatsby-plugin-image": "^1.12.0",
@@ -28,7 +28,8 @@
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-root-import": "^2.0.7",
-    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-s3": "^0.3.8",
+    "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-remark-autolink-headers": "^4.9.0",
     "gatsby-remark-images": "^5.9.0",
