Switch to deploying to S3
Migrating to hosting in S3 instead of github pages.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "deploy": "gatsby build && gh-pages -d public -b main",
+    "deploy-gh-pages": "gatsby build && gh-pages -d public -b main",
+    "deploy": "gatsby-plugin-s3 deploy",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
