--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,6 +2,8 @@
 version: 0.1
 phases:
   install:
+    runtime-versions:
+      nodejs: 14
     commands:
       - ‘npm install -g gatsby’
   pre_build:
