--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,16 +6,16 @@ phases:
       nodejs: 14
   pre_build:
     commands:
-      - ‘npm install -g gatsby’
-      - ‘npm install’
+      - npm install -g gatsby
+      - npm install
   build:
     commands:
-      - ‘npm run build’
+      - npm run build
   post_build:
     commands:
-      - ‘npm run deploy’
+      - npm run deploy
 artifacts:
   base-directory: public
   files:
-    - ‘**/*’
+    - "**/*"
   discard-paths: yes
