--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xpcoffee-github-io",
+  "name": "emerickbosch.com",
   "private": true,
   "description": "Emerick Bosch's personal site.",
   "version": "0.1.0",
@@ -10,34 +10,37 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/mdx": "^1.0.1",
     "@mdx-js/react": "^1.6.22",
     "@types/react-helmet": "^6.1.2",
     "autoprefixer": "^10.3.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.1",
     "eslint-plugin-graphql": "^4.0.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "gatsby": "^3.13.0",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
-    "gatsby-plugin-gatsby-cloud": "^2.11.0",
-    "gatsby-plugin-image": "^1.12.0",
-    "gatsby-plugin-manifest": "^3.12.0",
-    "gatsby-plugin-mdx": "^2.12.0",
-    "gatsby-plugin-offline": "^4.12.0",
-    "gatsby-plugin-postcss": "^4.12.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-gatsby-cloud": "^3.2.0",
+    "gatsby-plugin-google-gtag": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-mdx": "^2.14.0",
+    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-plugin-postcss": "^4.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-root-import": "^2.0.7",
     "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-remark-autolink-headers": "^4.9.0",
-    "gatsby-remark-images": "^5.9.0",
-    "gatsby-remark-prismjs": "^5.9.0",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-remark": "^4.9.0",
-    "gatsby-transformer-sharp": "^3.12.0",
-    "gh-pages": "^3.2.3",
+    "gatsby-remark-autolink-headers": "^4.11.0",
+    "gatsby-remark-images": "^5.11.0",
+    "gatsby-remark-katex": "^5.11.0",
+    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "katex": "^0.13.18",
+    "patch-package": "^6.4.7",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "prismjs": "^1.24.1",
@@ -65,9 +68,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xpcoffee/xpcoffee.github.io"
+    "url": "https://github.com/xpcoffee/emerickbosch.com"
   },
   "bugs": {
-    "url": "https://github.com/xpcoffee/xpcoffee.github.io/issues"
+    "url": "https://github.com/xpcoffee/emerickbosch.com/issues"
   }
 }
