--- a/package.json
+++ b/package.json
@@ -2,63 +2,58 @@
   "name": "emerickbosch.com",
   "private": true,
   "description": "Emerick Bosch's personal site.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "Emerick Bosch <xpc.dev@gmail.com>",
   "dependencies": {
-    "@fontsource/quicksand": "^4.5.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@fontsource/quicksand": "^5.0.15",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/mdx": "^3.0.0",
+    "@mdx-js/react": "^2.3.0",
     "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.0",
-    "babel-plugin-remove-graphql-queries": "^4.5.1",
-    "eslint": "^8.5.0",
+    "babel-plugin-remove-graphql-queries": "^5.12.1",
+    "eslint": "^8.54.0",
     "eslint-plugin-graphql": "^4.0.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "gatsby": "^4.0.0-next",
-    "gatsby-plugin-fontawesome-css": "^1.2.0",
-    "gatsby-plugin-gatsby-cloud": "^4.4.0",
-    "gatsby-plugin-google-gtag": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-mdx": "^3.15.2",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-postcss": "^5.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-root-import": "^2.0.8",
-    "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-remark-autolink-headers": "^5.4.0",
-    "gatsby-remark-images": "^6.4.0",
-    "gatsby-remark-katex": "^6.4.0",
-    "gatsby-remark-prismjs": "^6.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-remark": "^5.5.2",
-    "gatsby-transformer-sharp": "^4.4.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-gatsby-cloud": "^5.12.2",
+    "gatsby-plugin-google-gtag": "^5.12.3",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-mdx": "^5.12.3",
+    "gatsby-plugin-offline": "^6.12.3",
+    "gatsby-plugin-postcss": "^6.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-root-import": "^2.0.9",
+    "gatsby-plugin-s3": "^0.4.1",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-typegen": "^3.1.0",
+    "gatsby-remark-autolink-headers": "^6.12.3",
+    "gatsby-remark-images": "^7.12.3",
+    "gatsby-remark-katex": "^7.12.0",
+    "gatsby-remark-prismjs": "^7.12.0",
+    "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-transformer-remark": "^6.12.3",
+    "gatsby-transformer-sharp": "^5.12.3",
     "katex": "^0.13.3",
-    "patch-package": "^6.4.7",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "^3.1.0",
     "prismjs": "^1.27.0",
-    "prop-types": "^15.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^3.0.7",
-    "typescript": "^4.5.4"
+    "typescript": "^5.2.2"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -76,10 +71,6 @@
   "bugs": {
     "url": "https://github.com/xpcoffee/emerickbosch.com/issues"
   },
-  "//": [
-    "[resolution]: immer from gatsby -> react-dev-tools",
-    "[resolution]: netmask from gatsby-plugin-s3"
-  ],
   "resolutions": {
     "immer": "9.0.6",
     "netmask": "2.0.1"
