--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
   "name": "emerickbosch.com",
+  "author": "Emerick Bosch <xpc.dev@gmail.com>",
   "private": true,
   "description": "Emerick Bosch's personal site.",
   "version": "0.2.0",
-  "author": "Emerick Bosch <xpc.dev@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xpcoffee/emerickbosch.com"
+  },
+  "bugs": {
+    "url": "https://github.com/xpcoffee/emerickbosch.com/issues"
+  },
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "deploy-gh-pages": "gatsby build && gh-pages -d public -b main",
+    "deploy": "gatsby build && gatsby-plugin-s3 deploy --yes",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
   "dependencies": {
     "@fontsource/quicksand": "^5.0.15",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -12,6 +30,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/mdx": "^3.0.0",
     "@mdx-js/react": "^2.3.0",
+    "@sindresorhus/slugify": "^2.2.1",
     "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.0",
     "babel-plugin-remove-graphql-queries": "^5.12.1",
@@ -19,6 +38,7 @@
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "esm": "^3.2.25",
     "gatsby": "^5.0.0",
     "gatsby-plugin-gatsby-cloud": "^5.12.2",
     "gatsby-plugin-google-gtag": "^5.12.3",
@@ -40,6 +60,7 @@
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-remark": "^6.12.3",
     "gatsby-transformer-sharp": "^5.12.3",
+    "graphql": "^16.8.1",
     "katex": "^0.13.3",
     "postcss": "^8.4.5",
     "prettier": "^3.1.0",
@@ -52,27 +73,5 @@
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "deploy-gh-pages": "gatsby build && gh-pages -d public -b main",
-    "deploy": "gatsby build && gatsby-plugin-s3 deploy --yes",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xpcoffee/emerickbosch.com"
-  },
-  "bugs": {
-    "url": "https://github.com/xpcoffee/emerickbosch.com/issues"
-  },
-  "resolutions": {
-    "immer": "9.0.6",
-    "netmask": "2.0.1"
-  }
+  "license": "0BSD"
 }
