--- a/package.json
+++ b/package.json
@@ -62,13 +62,15 @@
     "gatsby-transformer-sharp": "^5.12.3",
     "graphql": "^16.8.1",
     "katex": "^0.13.3",
+    "mdast-util-to-string": "^4.0.0",
     "postcss": "^8.4.5",
     "prettier": "^3.1.0",
     "prismjs": "^1.27.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^3.0.7",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "unist-util-visit": "^5.0.0"
   },
   "keywords": [
     "gatsby"
