--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "esm": "^3.2.25",
     "gatsby": "^5.0.0",
+    "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-gatsby-cloud": "^5.12.2",
     "gatsby-plugin-google-gtag": "^5.12.3",
     "gatsby-plugin-image": "^3.12.3",
