--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --verbose",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "deploy-gh-pages": "gatsby build && gh-pages -d public -b main",
     "deploy": "gatsby build && gatsby-plugin-s3 deploy --yes",
@@ -33,18 +33,19 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.0",
-    "babel-plugin-remove-graphql-queries": "^5.12.1",
     "eslint": "^8.54.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.0.1",
     "esm": "^3.2.25",
-    "gatsby": "^5.0.0",
+    "gatsby": "^5.13.6",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-gatsby-cloud": "^5.12.2",
     "gatsby-plugin-google-gtag": "^5.12.3",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
-    "gatsby-plugin-mdx": "^5.12.3",
+    "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-offline": "^6.12.3",
     "gatsby-plugin-postcss": "^6.12.0",
     "gatsby-plugin-react-helmet": "^6.12.0",
@@ -58,9 +59,8 @@
     "gatsby-remark-katex": "^7.12.0",
     "gatsby-remark-prismjs": "^7.12.0",
     "gatsby-source-filesystem": "^5.12.1",
-    "gatsby-transformer-remark": "^6.12.3",
-    "gatsby-transformer-sharp": "^5.12.3",
-    "graphql": "^16.8.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "katex": "^0.13.3",
     "mdast-util-to-string": "^4.0.0",
     "postcss": "^8.4.5",
@@ -68,6 +68,8 @@
     "prismjs": "^1.27.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.0.7",
     "typescript": "^5.2.2",
     "unist-util-visit": "^5.0.0"
