--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.4",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.39.0",
@@ -38,7 +37,7 @@
     "ora": "^8.0.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "rehype-mdx-code-props": "^3.0.1",
+    "rehype-code-titles": "^1.2.0",
     "rehype-prism-plus": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
