--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf out && next build && tsx src/deploy/generate-feeds.ts",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
+    "start": "npm run build && npx serve@latest out",
     "deploy": "tsx src/deploy/s3.ts",
     "deploy-dev": "tsx --env-file=.env-dev src/deploy/s3.ts"
   },
